# unrealpm

./: .gitignore  Cargo.toml  README.md  clippy.toml  rustfmt.toml
scripts/: run_tests.sh
src/: config.rs  error.rs  installer.rs  lib.rs  lockfile.rs  main.rs  manifest.rs  platform.rs  pubgrub_resolver.rs  registry.rs  registry_http.rs  resolver.rs  signing.rs
src/commands/: build.rs  cache.rs  config.rs  doctor.rs  init.rs  install.rs  keys.rs  list.rs  login.rs  mod.rs  outdated.rs  pack.rs  publish.rs  register.rs  search.rs  tokens.rs  tree.rs  uninstall.rs  unpublish.rs  update.rs  verify.rs  whoami.rs  why.rs  yank.rs
tests/: README.md  api_tests.rs  integration_test.rs  registry_integration_tests.rs  resolver_tests.rs  test_utils.rs
